welcome.lessons.welcome.array.occurenceofvalue.OccurrenceOfValue.scala.error
occurrences:2: error: value lenght is not a member of Array[Int]
var n = nums.lenght;
             ^occurrences:5: error: not found: value value
		if (nums(k) == value) {
                               ^