welcome.lessons.welcome.array.occurenceofvalue.OccurrenceOfValue.scala.code
def occurrences(nums:Array[Int],lookingFor:Int):Int = {
var n = nums.lenght;
var comp = 0;
for (k <- 0 to (n-1)) {
		if (nums(k) == value) {
			comp = comp + 1;
		} 
		return comp;
}
return comp;
}
